Anonymous | Login | 2019-02-24 08:56 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0023147 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2012-05-06 19:56 | 2012-11-16 13:18 | ||||
Reporter | QbProg | ||||||||
Assigned To | omy | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2010 | OS Version | 32 bit | ||||
Product Version | [OCCT] 6.5.3 | ||||||||
Target Version | [OCCT] 6.5.4 | Fixed in Version | [OCCT] 6.5.4 | ||||||
Summary | 0023147: Suspicious if (5) | ||||||||
Description | The last one :) src\GeomFill\GeomFill_NSections.cxx ,line 562 , line 568 if (j==jfin && vClosed) if (j==jdeb && vClosed) vClosed is assigned false and never reassigned. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
||||||
|
![]() |
|
(0021830) omy (developer) 2012-10-18 12:22 |
Dear JGV, Fix is integrated to branch CR23147 (see commit message for details). Please review. |
(0021831) Pawel (developer) 2012-10-18 12:44 |
Dear omy, in the proposed solution in line 536 there is an 'else' without the corresponding 'if'. Please, have a look at it. Thank you. Pawel |
(0021832) omy (developer) 2012-10-18 14:21 |
Dear Pawel, I've fixed the mistake. Thank you for finding it. |
(0021877) jgv (developer) 2012-10-22 11:39 |
No remarks |
(0021914) mkv (tester) 2012-10-24 10:38 |
Dear BugMaster, Branch CR23147 (and products from GIT master) was compiled on Linux and Windows platforms. There is compilation error on Linux platform: http://jenkins-test-01.nnov.opencascade.com/user/mnt/my-views/view/CR23147/job/mnt-CR23147-master_build_occt_linux/1/parsed_console/? [^] ../../../src/GeomFill/GeomFill_NSections.cxx: In member function 'void GeomFill_NSections::ComputeSurface()': ../../../src/GeomFill/GeomFill_NSections.cxx:557: error: 's2Point' was not declared in this scope make[2]: *** [GeomFill_NSections.lo] Error 1 |
(0021937) omy (developer) 2012-10-25 12:14 |
Dear MKV, I've fixed this error. Please, test |
(0022005) apn (administrator) 2012-10-30 11:19 |
Dear BugMaster, Branch CR23147 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed |
![]() |
|||
occt: master 9046e4fc
Timestamp: 2012-11-02 11:18:21 Author: omy [ Details ] [ Diff ] |
0023147: Suspicious if (5) Removed non-executed parts of code because Standard_Boolean s1Point = Standard_False; Standard_Boolean s2Point = Standard_False; Standard_Boolean vClosed = Standard_False; and never changed thus some parts of code are non-reachable. Fixed mistake with 'else' without corresponding 'if'. Commented unreachable code part. |
||
mod - src/GeomFill/GeomFill_NSections.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2012-05-06 19:56 | QbProg | New Issue | |
2012-05-06 19:56 | QbProg | Assigned To | => jgv |
2012-05-07 09:19 | abv | Relationship added | child of 0023132 |
2012-05-07 09:22 | abv | Assigned To | jgv => dbv |
2012-05-07 09:22 | abv | Status | new => assigned |
2012-05-07 09:23 | abv | Target Version | => 6.5.4 |
2012-10-09 18:44 | oan | Assigned To | dbv => omy |
2012-10-18 12:21 | omy | Assigned To | omy => jgv |
2012-10-18 12:21 | omy | Status | assigned => resolved |
2012-10-18 12:22 | omy | Note Added: 0021830 | |
2012-10-18 12:44 | Pawel | Note Added: 0021831 | |
2012-10-18 14:21 | omy | Note Added: 0021832 | |
2012-10-22 11:39 | jgv | Note Added: 0021877 | |
2012-10-22 11:39 | jgv | Status | resolved => reviewed |
2012-10-23 16:08 | mkv | Assigned To | jgv => mkv |
2012-10-24 10:38 | mkv | Note Added: 0021914 | |
2012-10-24 10:39 | mkv | Test case number | => Not needed |
2012-10-24 10:39 | mkv | Assigned To | mkv => omy |
2012-10-24 10:39 | mkv | Status | reviewed => assigned |
2012-10-25 12:14 | omy | Note Added: 0021937 | |
2012-10-25 12:14 | omy | Assigned To | omy => mkv |
2012-10-25 12:14 | omy | Status | assigned => resolved |
2012-10-25 12:55 | abv | Status | resolved => reviewed |
2012-10-30 11:19 | apn | Note Added: 0022005 | |
2012-10-30 11:20 | apn | Assigned To | mkv => bugmaster |
2012-10-30 11:20 | apn | Status | reviewed => tested |
2012-11-06 19:02 | omy | Changeset attached | => occt master 9046e4fc |
2012-11-06 19:03 | omy | Assigned To | bugmaster => omy |
2012-11-06 19:03 | omy | Status | tested => verified |
2012-11-06 19:03 | omy | Resolution | open => fixed |
2012-11-16 13:13 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:18 | bugmaster | Status | verified => closed |
Copyright © 2000 - 2019 MantisBT Team |