0023147: Suspicious if (5)

Removed non-executed parts of code because

   Standard_Boolean s1Point = Standard_False;
   Standard_Boolean s2Point = Standard_False;
   Standard_Boolean vClosed = Standard_False;

and never changed thus some parts of code are non-reachable.
Fixed mistake with 'else' without corresponding 'if'.
Commented unreachable code part.